# meter-reader-train

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_ORIGINAL.md  README_TRAINING.md  README_original.md  pyproject.toml  requirements-stage1.txt  requirements.txt  train.py
config/: model_topology.yaml  runtime_policy.yaml
configs/: data_end2end.yaml  labeling_rules.yaml  model_topology.yaml  runtime_policy.yaml  train_phase1_frozen.yaml  train_phase2_unfrozen.yaml
data/: README.md
data/stage1_dial_seg/: INFO.md  meter-panel.ndjson  water-meter.ndjson
data/stage2_digit_det/: INFO.md  meter-panel-cropped-dial.ndjson  water-meter-cropped-dial.ndjson
datasets/: mix_stage1_v1.yaml  mix_v1_robust.yaml  mix_v1_stage2.yaml  mix_v1_stage3.yaml
datasets/mix_stage1_v1/: data.yaml
docs/: MEMO_DIGIT_NATURAL_DISTRIBUTION.md  README_TRAINING.md  architecture.md
docs/YOLO/: README.md  WHY YOLO.md
docs/archived/: IMPLEMENTATION_SUMMARY.md
scripts/: auto_label_stage2_crops.py  convert_digit_labels_to_e2e.py  demo_pipeline.py  eval_pipeline.py  label_manual.MEMO.md  label_manual.py  prepare_data.py  prepare_stage2_data.py  prepare_stage3_data.py  split_yolo_flat_to_splits.py  test_postprocess_gt.py
src/: __init__.py  train_end2end.py  train_end2end_model.py  train_pipeline_stage1.py  train_pipeline_stage2.py  train_pipeline_stage3.py
src/augmentation/: __init__.py  angle_correction.py
src/data/: __init__.py  data_yaml_generator.py  manifest_loader.py
src/pipeline/: reader.py  (+5 more)
tests/: test_stage1_dial_roi_canvas.py  test_stage1_pca_alignment.py
(+37 files in other folders)
